Fixed spacing between text on mobile.

--- a/JPLMobile.css
+++ b/JPLMobile.css
@@ -20,7 +20,7 @@ body {
 #left_logo{ 
 	position: absolute;
 	display: block;
-	margin-left: 30%;
+	margin-left: 33%;
 	margin-top: 12%;
 }
 
